Fix a lot of build warnings in IDE (#55)